--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "aerial",
   "version": "0.1.0",
   "description": "",
-  "main": "index.jsx",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "babel lib --out-dir dist --ignore test.js",
     "test": "mocha --compilers js:babel-core/register mochaInit.js \"lib/**/*.test.{js,jsx}\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\" \"lib/**/*.{js,jsx}\"",
     "format-check": "prettier --list-different \"src/**/*.{js,jsx}\" \"lib/**/*.{js,jsx}\""
@@ -25,6 +26,7 @@
     "react-dom": "^15.5.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
