--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ bower_components
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
-dist
+lib
 
 # Dependency directories
 node_modules/
