--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
   },
   "homepage": "https://github.com/laszlokardinal/aerial#readme",
   "dependencies": {
-    "prop-types": "^15.5.0",
-    "react": "^15.5.0",
-    "react-broadcast": "^0.5.2",
-    "react-dom": "^15.5.0"
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0-alpha.12",
+    "react-broadcast": "^0.5.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -33,11 +32,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "enzyme": "^3.1.0",
-    "enzyme-adapter-react-15": "^1.0.1",
+    "enzyme-adapter-react-16": "^1.0.1",
     "jsdom": "^11.3.0",
     "mocha": "^4.0.1",
     "prettier": "1.7.4",
-    "react-test-renderer": "^15.6.2",
-    "sinon": "^4.0.1"
+    "react-test-renderer": "^16.0.0",
+    "sinon": "^4.0.1",
+    "react-dom": "^16.0.0"
   }
 }
